update : Exception 관련 수정